--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
   "require": {
     "php": ">=8.1",
     "illuminate/support": "^8.0|^9.0|^10.0|^11.0|^12.0",
-    "symfony/console": "^6.0"
+    "symfony/console": "^6.0|^7.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^10.0",
